--- a/Website/Assets/CSS/styles.css
+++ b/Website/Assets/CSS/styles.css
@@ -17,6 +17,10 @@ Universal Selector = Sets the style for all the elements on the HTML Page
 html{
   box-sizing: border-box;
 }
+
+body{
+  font-family: 'Poppins', sans-serif;
+}
   
 a{
   margin: 10px 0;
@@ -36,7 +40,8 @@ nav {
     width: 100%;
     justify-content: space-between;
     padding: 0px 30px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.125);
+    /* box-shadow: 0 2px 2px rgba(0, 0, 0, 0.125); */
+    border: 1px solid #000000;
 }
 
 nav .wrapper {
@@ -60,4 +65,47 @@ nav .wrapper {
     padding: 0.9rem 1.5rem;
     border-radius: 0.5rem;
     transition: all 300ms ease;
+}
+
+.about {
+  border: 1px solid #000000;
+}
+
+video {
+  width: 80%;
+}
+
+header{
+  border: 1px solid #000000;
+}
+
+.how-it-works{
+  border: 1px solid #000000;
+}
+
+.steps{
+  border: 1px solid #000000;
+  display: flex;
+}
+
+.image-contents{
+  width: 50%;
+}
+
+.text-contents{
+  width: 50%;
+  padding: 12% 1.6rem;
+}
+
+.donation{
+  border: 1px solid #000000;
+}
+
+footer{
+  border: 1px solid #000000;
+}
+
+.image-contents img, .texrt-contents img {
+  width: 100%;
+  height: 100%;
 }
