--- a/Website/Assets/CSS/styles.css
+++ b/Website/Assets/CSS/styles.css
@@ -44,6 +44,7 @@ nav {
     padding: 0px 30px;
     /* box-shadow: 0 2px 2px rgba(0, 0, 0, 0.125); */
     border: 1px solid #000000;
+    margin-bottom: 1rem;
 }
 
 nav .wrapper {
