--- a/Website/Assets/CSS/styles.css
+++ b/Website/Assets/CSS/styles.css
@@ -28,6 +28,16 @@ a{
   margin: 10px 0;
 }
 
+h1 {
+  font-weight: 200;
+  font-size: 5rem;
+}
+
+h2 {
+  font-weight: 300;
+  font-size: 3rem;
+}
+
 .about, .donation, footer {
     text-align: center;
 }
