--- a/Website/Assets/CSS/styles.css
+++ b/Website/Assets/CSS/styles.css
@@ -16,21 +16,28 @@ Universal Selector = Sets the style for all the elements on the HTML Page
 
 html{
   box-sizing: border-box;
+  height: 100%;
 }
 
 body{
   font-family: 'Poppins', sans-serif;
-  background: linear-gradient(to right,  #004e92, #003158);
+  /* background: linear-gradient(to right,  #004e92, #003158); */
   color: #ffffff;
+  height: 100%;
 }
 
-p, label {
+p {
   font-size: 1.3rem;
 }
 
 a{
   margin: 10px 0;
 }
+
+a:visited {
+  color: #ffffff;
+}
+
 
 h1 {
   font-weight: 200;
@@ -52,6 +59,7 @@ h3 {
 
 .main-content {
     width: 100%;
+    background: linear-gradient(to right,  #004e92, #003158);
 }
 
 nav {
@@ -63,6 +71,20 @@ nav {
     /* box-shadow: 0 2px 2px rgba(0, 0, 0, 0.125); */
     border: 1px solid #000000;
     margin-bottom: 1rem;
+    background-color: transparent;
+    transition: background-color 0.4s ease-out;
+    z-index: 10;
+}
+
+nav.scroll {
+  /* background-color: #A1572F;
+  color: #eef; */
+
+  /* background: rgba( 255, 255, 255, 0.25 ); */
+  background: rgba( 90, 127, 148, 0.9 );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 7.5px );
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 nav .wrapper {
@@ -84,12 +106,44 @@ nav .wrapper {
     color: #555555;
 }
 
-.pageLink a {
+.pageLink button {
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+.pageLink button:hover {
+  background: #0096C7;
+  border-radius: 5px;
+  transition: all 300ms ease;
+}
+
+.buttonHoverMargin {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.pageLink button p {
     color: #ffffff;
     font-size: 1.2rem;
     padding: 0.9rem 1.5rem;
     border-radius: 0.5rem;
-    transition: all 300ms ease;
+    transition: all 500ms ease;
+}
+
+#buttonNav {
+  background: #0077B6;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+  outline: inherit;
+  border-radius: 5px; 
 }
 
 .about {
@@ -111,32 +165,48 @@ header{
 
 .companyLogo img {
   display: inline-block;
-  padding: 0 10px;
+  padding: 0 40px;
 }
 
+#partnership{
+  display: inline-block;
+}
 
 .how-it-works{
   border: 1px solid #000000;
   background: linear-gradient(to right, #0077B6, #0096C7);
+  text-align: center;
+  padding-bottom: 4rem;
 }
 
 .steps{
   border: 1px solid #000000;
   display: flex;
+  transform: skewY(-5deg);
+  margin: 2rem;
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 7.5px );
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+  border-radius: 50px;
+  margin-bottom: 4rem;
 }
 
-.image-contents{
+/* .image-contents{
   width: 50%;
-}
+} */
 
 .text-contents{
-  width: 50%;
-  padding: 12% 1.6rem;
+  width: 60%;
+  /* padding: 12% 1.6rem; */
+  padding: 0 1.6rem;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .image-contents img, .text-contents img {
   width: 100%;
   height: 100%;
+  vertical-align: top;
 }
 
 .donation{
@@ -144,9 +214,96 @@ header{
   background: linear-gradient(to right, #0096C7, #90E0EF);
 }
 
+.donation h1, .how-it-works h1{
+  padding: 4rem 0;
+}
+
+.donation-form {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 4rem;
+  background: rgba( 255, 255, 255, 0.25 );
+  /* background: rgba( 90, 127, 148, 0.9 ); */
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 7.5px );
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+  border-radius: 50px;
+  margin-bottom: 4rem;
+}
+
+.donation-form .user-box {
+  position: relative;
+}
+
+.donation-form .user-box input {
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid #fff;
+  outline: none;
+  background: transparent;
+}
+
+.donation-form .user-box label {
+  position: absolute;
+  top:0;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  pointer-events: none;
+  transition: .5s;
+}
+
+.donation-form .user-box input:focus ~ label,
+.donation-form .user-box input:valid ~ label {
+  top: -20px;
+  left: 0;
+  color: #03e9f4;
+  font-size: 12px;
+}
+
+.donation-container {
+  display: flex;
+}
+
+.amount-raised, .link-to-donation-form {
+  width: 50%;
+  padding: 1.6rem;
+  margin-left: 1.4rem;
+  margin-right: 1.4rem;
+
+  background: rgba( 255, 255, 255, 0.25 );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 7.5px );
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+  border-radius: 50px;
+  margin-bottom: 4rem;
+}
+
 footer{
   border: 1px solid #000000;
   padding-top: 4rem;
 }
 
+#dfb{
+  padding: 1rem 2.5rem;
+  background: #0077B6;
+  color: inherit;
+  border: none;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  border: 2px solid #0077B6;
+  border-radius: 5px;
+}
 
+#dfbText{
+  font-size: 1.3rem;
+  text-decoration: none;
+  color: #fff;
+}
