--- a/Website/Assets/CSS/styles.css
+++ b/Website/Assets/CSS/styles.css
@@ -258,10 +258,10 @@ video {
   width: 100%;
   padding: 10px 0;
   font-size: 16px;
-  color: #fff;
+  color: #555555;
   margin-bottom: 30px;
   border: none;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid #927c61;
   outline: none;
   background: transparent;
 }
@@ -272,7 +272,7 @@ video {
   left: 0;
   padding: 10px 0;
   font-size: 16px;
-  color: #fff;
+  color: #927c61;
   pointer-events: none;
   transition: .5s;
 }
@@ -281,7 +281,7 @@ video {
 .donation-form .user-box input:valid ~ label {
   top: -20px;
   left: 0;
-  color: #03e9f4;
+  color: #ddd2c4;
   font-size: 12px;
 }
 
